made pagination to go to data layer
